# museeks-tauri

./: .gitignore  package.json  tsconfig.json  vite.config.ts
src/: App.module.css  App.tsx  index.html  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs
src-tauri/src/commands/: library.rs  mod.rs  window.rs
src-tauri/src/integrations/: menu.rs  mod.rs
src-tauri/src/lib/: config.rs  db.rs  dirs.rs  fs_utils.rs  mod.rs  structs.rs  time_logger.rs
src/actions/: ActionsApp.ts  ActionsSettings.ts  AppActions.ts  LibraryActions.ts  SettingsActions.ts
src/components/: Header.module.css  Header.tsx  PlayerControls.tsx  Sidebar.module.css  Sidebar.tsx
src/elements/: Icon.module.css  Icon.tsx  Separator.module.css  Separator.tsx  Settings.tsx  SidebarItem.module.css  SidebarItem.tsx  SidebarSection.module.css  SidebarSection.tsx  SongsList.module.css  SongsList.tsx  SongsListHeader.module.css  SongsListHeader.tsx  SongsListHeaderCell.tsx
src/icons/: icons.ts
src/lib/: constants-order.ts  player.ts  themes.ts  utils-events.ts  utils-library.ts  utils-list.ts  utils.ts
src/lib/__tests__/: themes.test.ts
src/stores/: app.ts  library.ts  player.ts  tracks.ts
src/styles/: global.css  margins.module.css  margins.ts  reset.css
src/themes/: dark-legacy.json  dark.json  light.json
src/typings/: museeks.ts
src/views/: ViewLibrary.module.css  ViewLibrary.tsx  ViewPlaylist.tsx  ViewSettingsLibrary.tsx
