[package]
name = "museeks"
version = "0.20.0"
description = "A simple, clean and cross-platform music player"
authors = ["Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>"]
license = "MIT"
repository = "https://github.com/martpie/museeks"
default-run = "museeks"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
log = "0.4.17"
simple_logger=  { version = "2.1.0", default-features = false, features = ["colors"] }
id3 = "1.0.3"
walkdir = "2.3.2"
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
bonsaidb = { version = "0.4.1", features = ["local", "local-async"] }
ts-rs = "6.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
